--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,8 @@
+<a href="/user/signup">Signup</a><hr>
+<a href="/user/login">Login</a><hr>
+<a href="/user/main">Main</a><hr>
+<a href="/user/private">Private</a>
+    
+{{!-- 
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<p>Welcome to {{title}}</p> --}}
